sintatico.output
Terminals unused in grammar

   T_FUNCAO
   T_FIMFUNCAO


State 58 conflicts: 9 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 $@2: %empty

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis

    8 $@3: %empty

    9 declaracao_variaveis: tipo $@3 lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF
   14                | lista_variaveis T_VETOR
   15                | T_VETOR

   16 lista_comandos: %empty
   17               | comando lista_comandos

   18 comando: entrada_saida
   19        | repeticao
   20        | selecao
   21        | atribuicao
   22        | para

   23 entrada_saida: leitura
   24              | escrita

   25 leitura: T_LEIA T_VETOR
   26        | T_LEIA T_IDENTIF

   27 escrita: T_ESCREVA T_VETOR
   28        | T_ESCREVA T_IDENTIF

   29 $@4: %empty

   30 repeticao: T_ENQTO expressao T_FACA $@4 lista_comandos T_FIMENQTO

   31 $@5: %empty

   32 $@6: %empty

   33 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   34 $@7: %empty

   35 $@8: %empty

   36 $@9: %empty

   37 $@10: %empty

   38 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

   39 $@11: %empty

   40 atribuicao: T_IDENTIF $@11 T_ATRIB expressao

   41 $@12: %empty

   42 atribuicao: T_VETOR $@12 T_ATRIB expressao

   43 expressao: expressao T_VEZES expressao
   44          | expressao T_DIV expressao
   45          | expressao T_MAIS expressao
   46          | expressao T_MENOS expressao
   47          | expressao T_MAIOR expressao
   48          | expressao T_MENOR expressao
   49          | expressao T_IGUAL expressao
   50          | expressao T_E expressao
   51          | expressao T_OU expressao
   52          | T_NAO expressao
   53          | termo

   54 termo: T_IDENTIF
   55      | T_VETOR
   56      | T_NUMERO
   57      | T_V
   58      | T_F

   59 $@13: %empty

   60 termo: T_ABRE $@13 expressao T_FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAMA (258) 3
T_INICIO (259) 2
T_FIM (260) 2
T_FUNCAO (261)
T_FIMFUNCAO (262)
T_IDENTIF (263) 3 12 13 26 28 40 54
T_LEIA (264) 25 26
T_ESCREVA (265) 27 28
T_ENQTO (266) 30
T_FACA (267) 30 38
T_FIMENQTO (268) 30
T_PARA (269) 38
T_DE (270) 38
T_ATE (271) 38
T_PASSO (272) 38
T_FIMPARA (273) 38
T_SE (274) 33
T_ENTAO (275) 33
T_SENAO (276) 33
T_FIMSE (277) 33
T_ATRIB (278) 40 42
T_VEZES (279) 43
T_DIV (280) 44
T_MAIS (281) 45
T_MENOS (282) 46
T_MAIOR (283) 47
T_MENOR (284) 48
T_IGUAL (285) 49
T_E (286) 50
T_OU (287) 51
T_V (288) 57
T_F (289) 58
T_NUMERO (290) 56
T_NAO (291) 52
T_ABRE (292) 60
T_FECHA (293) 60
T_VETOR (294) 14 15 25 27 42 55
T_LOGICO (295) 10
T_INTEIRO (296) 11


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 2, on right: 0
$@1 (44)
    on left: 1, on right: 2
cabecalho (45)
    on left: 3, on right: 2
variaveis (46)
    on left: 4 5, on right: 2
declaracao_variaveis (47)
    on left: 7 9, on right: 5 7
$@2 (48)
    on left: 6, on right: 7
$@3 (49)
    on left: 8, on right: 9
tipo (50)
    on left: 10 11, on right: 7 9
lista_variaveis (51)
    on left: 12 13 14 15, on right: 7 9 12 14
lista_comandos (52)
    on left: 16 17, on right: 2 17 30 33 38
comando (53)
    on left: 18 19 20 21 22, on right: 17
entrada_saida (54)
    on left: 23 24, on right: 18
leitura (55)
    on left: 25 26, on right: 23
escrita (56)
    on left: 27 28, on right: 24
repeticao (57)
    on left: 30, on right: 19
$@4 (58)
    on left: 29, on right: 30
selecao (59)
    on left: 33, on right: 20
$@5 (60)
    on left: 31, on right: 33
$@6 (61)
    on left: 32, on right: 33
para (62)
    on left: 38, on right: 22
$@7 (63)
    on left: 34, on right: 38
$@8 (64)
    on left: 35, on right: 38
$@9 (65)
    on left: 36, on right: 38
$@10 (66)
    on left: 37, on right: 38
atribuicao (67)
    on left: 40 42, on right: 21
$@11 (68)
    on left: 39, on right: 40
$@12 (69)
    on left: 41, on right: 42
expressao (70)
    on left: 43 44 45 46 47 48 49 50 51 52 53, on right: 30 33 40 42
    43 44 45 46 47 48 49 50 51 52 60
termo (71)
    on left: 54 55 56 57 58 60, on right: 38 53
$@13 (72)
    on left: 59, on right: 60


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . $@1 variaveis T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    2 programa: cabecalho $@1 . variaveis T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   10 tipo: T_LOGICO .

    $default  reduce using rule 10 (tipo)


State 8

   11 tipo: T_INTEIRO .

    $default  reduce using rule 11 (tipo)


State 9

    2 programa: cabecalho $@1 variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 12


State 10

    5 variaveis: declaracao_variaveis .
    7 declaracao_variaveis: declaracao_variaveis . tipo $@2 lista_variaveis

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    tipo  go to state 13


State 11

    9 declaracao_variaveis: tipo . $@3 lista_variaveis

    $default  reduce using rule 8 ($@3)

    $@3  go to state 14


State 12

    2 programa: cabecalho $@1 variaveis T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20
    T_VETOR    shift, and go to state 21

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 22
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    para            go to state 29
    atribuicao      go to state 30


State 13

    7 declaracao_variaveis: declaracao_variaveis tipo . $@2 lista_variaveis

    $default  reduce using rule 6 ($@2)

    $@2  go to state 31


State 14

    9 declaracao_variaveis: tipo $@3 . lista_variaveis

    T_IDENTIF  shift, and go to state 32
    T_VETOR    shift, and go to state 33

    lista_variaveis  go to state 34


State 15

   40 atribuicao: T_IDENTIF . $@11 T_ATRIB expressao

    $default  reduce using rule 39 ($@11)

    $@11  go to state 35


State 16

   25 leitura: T_LEIA . T_VETOR
   26        | T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 36
    T_VETOR    shift, and go to state 37


State 17

   27 escrita: T_ESCREVA . T_VETOR
   28        | T_ESCREVA . T_IDENTIF

    T_IDENTIF  shift, and go to state 38
    T_VETOR    shift, and go to state 39


State 18

   30 repeticao: T_ENQTO . expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 47
    termo      go to state 48


State 19

   38 para: T_PARA . termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    termo  go to state 49


State 20

   33 selecao: T_SE . expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 50
    termo      go to state 48


State 21

   42 atribuicao: T_VETOR . $@12 T_ATRIB expressao

    $default  reduce using rule 41 ($@12)

    $@12  go to state 51


State 22

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 52


State 23

   17 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20
    T_VETOR    shift, and go to state 21

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 53
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    para            go to state 29
    atribuicao      go to state 30


State 24

   18 comando: entrada_saida .

    $default  reduce using rule 18 (comando)


State 25

   23 entrada_saida: leitura .

    $default  reduce using rule 23 (entrada_saida)


State 26

   24 entrada_saida: escrita .

    $default  reduce using rule 24 (entrada_saida)


State 27

   19 comando: repeticao .

    $default  reduce using rule 19 (comando)


State 28

   20 comando: selecao .

    $default  reduce using rule 20 (comando)


State 29

   22 comando: para .

    $default  reduce using rule 22 (comando)


State 30

   21 comando: atribuicao .

    $default  reduce using rule 21 (comando)


State 31

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 . lista_variaveis

    T_IDENTIF  shift, and go to state 32
    T_VETOR    shift, and go to state 33

    lista_variaveis  go to state 54


State 32

   13 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 13 (lista_variaveis)


State 33

   15 lista_variaveis: T_VETOR .

    $default  reduce using rule 15 (lista_variaveis)


State 34

    9 declaracao_variaveis: tipo $@3 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF
   14                | lista_variaveis . T_VETOR

    T_IDENTIF  shift, and go to state 55
    T_VETOR    shift, and go to state 56

    $default  reduce using rule 9 (declaracao_variaveis)


State 35

   40 atribuicao: T_IDENTIF $@11 . T_ATRIB expressao

    T_ATRIB  shift, and go to state 57


State 36

   26 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 26 (leitura)


State 37

   25 leitura: T_LEIA T_VETOR .

    $default  reduce using rule 25 (leitura)


State 38

   28 escrita: T_ESCREVA T_IDENTIF .

    $default  reduce using rule 28 (escrita)


State 39

   27 escrita: T_ESCREVA T_VETOR .

    $default  reduce using rule 27 (escrita)


State 40

   54 termo: T_IDENTIF .

    $default  reduce using rule 54 (termo)


State 41

   57 termo: T_V .

    $default  reduce using rule 57 (termo)


State 42

   58 termo: T_F .

    $default  reduce using rule 58 (termo)


State 43

   56 termo: T_NUMERO .

    $default  reduce using rule 56 (termo)


State 44

   52 expressao: T_NAO . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 58
    termo      go to state 48


State 45

   60 termo: T_ABRE . $@13 expressao T_FECHA

    $default  reduce using rule 59 ($@13)

    $@13  go to state 59


State 46

   55 termo: T_VETOR .

    $default  reduce using rule 55 (termo)


State 47

   30 repeticao: T_ENQTO expressao . T_FACA $@4 lista_comandos T_FIMENQTO
   43 expressao: expressao . T_VEZES expressao
   44          | expressao . T_DIV expressao
   45          | expressao . T_MAIS expressao
   46          | expressao . T_MENOS expressao
   47          | expressao . T_MAIOR expressao
   48          | expressao . T_MENOR expressao
   49          | expressao . T_IGUAL expressao
   50          | expressao . T_E expressao
   51          | expressao . T_OU expressao

    T_FACA   shift, and go to state 60
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69


State 48

   53 expressao: termo .

    $default  reduce using rule 53 (expressao)


State 49

   38 para: T_PARA termo . $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    $default  reduce using rule 34 ($@7)

    $@7  go to state 70


State 50

   33 selecao: T_SE expressao . T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   43 expressao: expressao . T_VEZES expressao
   44          | expressao . T_DIV expressao
   45          | expressao . T_MAIS expressao
   46          | expressao . T_MENOS expressao
   47          | expressao . T_MAIOR expressao
   48          | expressao . T_MENOR expressao
   49          | expressao . T_IGUAL expressao
   50          | expressao . T_E expressao
   51          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 71
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69


State 51

   42 atribuicao: T_VETOR $@12 . T_ATRIB expressao

    T_ATRIB  shift, and go to state 72


State 52

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 53

   17 lista_comandos: comando lista_comandos .

    $default  reduce using rule 17 (lista_comandos)


State 54

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF
   14                | lista_variaveis . T_VETOR

    T_IDENTIF  shift, and go to state 55
    T_VETOR    shift, and go to state 56

    $default  reduce using rule 7 (declaracao_variaveis)


State 55

   12 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 56

   14 lista_variaveis: lista_variaveis T_VETOR .

    $default  reduce using rule 14 (lista_variaveis)


State 57

   40 atribuicao: T_IDENTIF $@11 T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 73
    termo      go to state 48


State 58

   43 expressao: expressao . T_VEZES expressao
   44          | expressao . T_DIV expressao
   45          | expressao . T_MAIS expressao
   46          | expressao . T_MENOS expressao
   47          | expressao . T_MAIOR expressao
   48          | expressao . T_MENOR expressao
   49          | expressao . T_IGUAL expressao
   50          | expressao . T_E expressao
   51          | expressao . T_OU expressao
   52          | T_NAO expressao .

    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    T_VEZES   [reduce using rule 52 (expressao)]
    T_DIV     [reduce using rule 52 (expressao)]
    T_MAIS    [reduce using rule 52 (expressao)]
    T_MENOS   [reduce using rule 52 (expressao)]
    T_MAIOR   [reduce using rule 52 (expressao)]
    T_MENOR   [reduce using rule 52 (expressao)]
    T_IGUAL   [reduce using rule 52 (expressao)]
    T_E       [reduce using rule 52 (expressao)]
    T_OU      [reduce using rule 52 (expressao)]
    $default  reduce using rule 52 (expressao)


State 59

   60 termo: T_ABRE $@13 . expressao T_FECHA

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 74
    termo      go to state 48


State 60

   30 repeticao: T_ENQTO expressao T_FACA . $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 29 ($@4)

    $@4  go to state 75


State 61

   43 expressao: expressao T_VEZES . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 76
    termo      go to state 48


State 62

   44 expressao: expressao T_DIV . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 77
    termo      go to state 48


State 63

   45 expressao: expressao T_MAIS . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 78
    termo      go to state 48


State 64

   46 expressao: expressao T_MENOS . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 79
    termo      go to state 48


State 65

   47 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 80
    termo      go to state 48


State 66

   48 expressao: expressao T_MENOR . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 81
    termo      go to state 48


State 67

   49 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 82
    termo      go to state 48


State 68

   50 expressao: expressao T_E . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 83
    termo      go to state 48


State 69

   51 expressao: expressao T_OU . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 84
    termo      go to state 48


State 70

   38 para: T_PARA termo $@7 . T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_DE  shift, and go to state 85


State 71

   33 selecao: T_SE expressao T_ENTAO . $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 31 ($@5)

    $@5  go to state 86


State 72

   42 atribuicao: T_VETOR $@12 T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 40
    T_V        shift, and go to state 41
    T_F        shift, and go to state 42
    T_NUMERO   shift, and go to state 43
    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_VETOR    shift, and go to state 46

    expressao  go to state 87
    termo      go to state 48


State 73

   40 atribuicao: T_IDENTIF $@11 T_ATRIB expressao .
   43 expressao: expressao . T_VEZES expressao
   44          | expressao . T_DIV expressao
   45          | expressao . T_MAIS expressao
   46          | expressao . T_MENOS expressao
   47          | expressao . T_MAIOR expressao
   48          | expressao . T_MENOR expressao
   49          | expressao . T_IGUAL expressao
   50          | expressao . T_E expressao
   51          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69
